--- a/Uloom_ul_Quran/src/main/resources/templates/pricing.html
+++ b/Uloom_ul_Quran/src/main/resources/templates/pricing.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pricing</title>
 <link rel="stylesheet" th:href="@{/css/style.css}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <link rel="shortcut icon" type="x-icon"
 	th:href="@{/images/quran_recitation.png}">
@@ -17,7 +18,7 @@
 		<thead>
 			<tr>
 				<th>Level</th>
-				<th>Fee/Month</th>
+				<th>Fee/Month(INR)</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -44,7 +45,7 @@
 		<thead>
 			<tr>
 				<th>Level</th>
-				<th>Fee/Month</th>
+				<th>Fee/Month(INR)</th>
 			</tr>
 		</thead>
 		<tbody>
